# jerboa

./: Cargo.toml  README.md  rustfmt.toml
crates/jerboa/: Cargo.toml
crates/jerboa-image/: Cargo.toml
crates/jerboa-image/src/: buffer.rs  error.rs  iters.rs  lib.rs
crates/jerboa-image/src/codec/: mod.rs
crates/jerboa-linalg/: Cargo.toml
crates/jerboa-linalg/src/: array.rs  axis.rs  complex.rs  core.rs  inner.rs  lib.rs  matrix.rs  num.rs  packet.rs  quaternion.rs  util.rs  vector.rs
crates/jerboa-linalg/src/array/: array_d.rs  array_dyn.rs  array_s.rs  dim.rs  packet.rs
crates/jerboa-linalg/src/core/: arith.rs  data.rs  index.rs  ops.rs  shape.rs  storage.rs
crates/jerboa-linalg/src/inner/: dyn_sized.rs  fixed_sized.rs  index.rs  shape.rs  storage.rs
crates/jerboa-linalg/src/packet/: arith.rs  iter.rs  ops.rs
crates/jerboa-rtc/: Cargo.toml
crates/jerboa-rts/: Cargo.toml
crates/jerboa-srr/: Cargo.toml
crates/jerboa/src/: lib.rs  main.rs
crates/jerboa/src/core/: axis.rs  bounds.rs  error.rs  mod.rs  num.rs  rounding.rs
crates/jerboa/src/core/image/: buffer.rs  error.rs  iters.rs  mod.rs
crates/jerboa/src/core/image/codec/: mod.rs
crates/jerboa/src/core/image/codec/pnm/: decode.rs  encode.rs  error.rs  mod.rs
crates/jerboa/src/rtc/: camera.rs  color.rs  integrator.rs  integrators.rs  mod.rs  ray.rs  scene.rs  shape.rs  view_plane.rs
crates/jerboa/src/rtc/camera/: pinhole.rs
crates/jerboa/src/rtc/integrator/: ray_cast.rs
crates/jerboa/src/rtc/shape/: plane.rs  sphere.rs
crates/jerboa/src/rtc/shapes/: mod.rs  plane.rs
src/: main.rs
(+11 files in other folders)
